<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/reducao_coronavirus"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSalario"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitleMain"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:autofillHints="1045.00"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/salario"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editSalario"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:text="@string/button_calcular" />


    <TextView
        android:id="@+id/text25percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCalcular"
        android:text="@string/reducao_de_25"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textSalarioEmpresa25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text25percent"
        android:text="@string/salario_empresa_25" />

    <TextView
        android:id="@+id/textBeneficio25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSalarioEmpresa25"
        android:text="@string/beneficio_em_reducao_25" />

    <TextView
        android:id="@+id/textSalario25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBeneficio25"
        android:text="@string/salario_em_reducao_25" />


    <TextView
        android:id="@+id/text50percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSalario25"
        android:layout_marginTop="15dp"
        android:text="@string/reducao_de_50"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textSalarioEmpresa50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text50percent"
        android:text="@string/salario_empresa_50" />

    <TextView
        android:id="@+id/textBeneficio50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSalarioEmpresa50"
        android:text="@string/beneficio_em_reducao_50" />

    <TextView
        android:id="@+id/textSalario50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBeneficio50"
        android:text="@string/salario_em_reducao_50" />


    <TextView
        android:id="@+id/text70percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSalario50"
        android:layout_marginTop="15dp"
        android:text="@string/reducao_de_70"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textSalarioEmpresa70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text70percent"
        android:text="@string/salario_empresa_70" />

    <TextView
        android:id="@+id/textBeneficio70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSalarioEmpresa70"
        android:text="@string/beneficio_em_reducao_70" />

    <TextView
        android:id="@+id/textSalario70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBeneficio70"
        android:text="@string/salario_em_reducao_70" />


    <TextView
        android:id="@+id/textAvisoSindical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSalario70"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="#F61919"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculo baseado na MP 936"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Desenvolvido por Ferdinando de Melo"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>